WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179931
WebCoreObjCExtras.h is being included in too many places
https://bugs.webkit.org/show_bug.cgi?id=179931
Summary
WebCoreObjCExtras.h is being included in too many places
Christopher Reid
Reported
2017-11-21 16:05:47 PST
It looks like WebCoreObjCExtras had more functionality which has since been removed without the includes being updated.
Attachments
Patch
(7.06 KB, patch)
2017-11-22 10:34 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2017-11-22 10:34:09 PST
Created
attachment 327461
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-22 11:45:00 PST
Comment on
attachment 327461
[details]
Patch Clearing flags on attachment: 327461 Committed
r225100
: <
https://trac.webkit.org/changeset/225100
>
WebKit Commit Bot
Comment 3
2017-11-22 11:45:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-22 11:45:18 PST
<
rdar://problem/35669308
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug