WebCoreObjCExtras.h is being included in too many places https://bugs.webkit.org/show_bug.cgi?id=179931

Patch by Christopher Reid <chris.reid@sony.com> on 2017-11-22
Reviewed by Darin Adler.

Source/WebCore:

No new tests no change in behavior.

Fixing cases where WebCoreObjCExtras.h is imported but not used.

* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
* platform/mac/WebCoreNSURLExtras.mm:

Source/WebKitLegacy/mac:

* Plugins/Hosted/WebHostedNetscapePluginView.mm:
* Plugins/WebBaseNetscapePluginView.mm:
* Plugins/WebBasePluginPackage.mm:
* Plugins/WebNetscapePluginStream.mm:
* Plugins/WebNetscapePluginView.mm:
* WebView/WebTextIterator.mm:
* WebView/WebViewData.mm:

Canonical link: https://commits.webkit.org/195968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225100 268f45cc-cd09-0410-ab3c-d52691b4dbfc